# astrobot

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README  README.md  mochji.example.env  mypy.ini  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: discord-changelog.yml  docker-image.yml  mypy.yml
astrobot/: __init__.py  bot.py  checks.py  colors.py  database.py  emojis.py  error.py  exceptions.py  fm.py  init_cogs.py  management.py  moderation.py  roles.py  test.py  time.py  types.py  user.py  util.py  welcome.py
astrobot/cogs/: __init__.py  emojis.py  error.py  halys.py  logger.py  management.py  moderation.py  spotify.py  test.py  user.py
astrobot/cogs/spotify/: __init__.py  spotify.py
astrobot/spotify/: __init__.py  database.py  spotify.py  utils.py
astrobot/time/: __init__.py  database.py  locations.txt  reminders.py  timers.py  usertime.py
astrobot/user_sys/: database.py
mochji/: __init__.py  __main__.py  exceptions.py  util.py
mochji/client/: bot.py  commands.py  management.py  moderation.py  roles.py
templates/: .env.default  docker-compose.yml
