[tool.poetry]
name = "astrobot"
version = "22.1.8"
description = "the all-encompassing god-level bot for mochjicord"
authors = ["kevinshome <noah.tanner7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "1.4.31"
psycopg2-binary = "2.9.3"
py-cord = "2.0.0b1"
python-dateutil = "2.8.2"
tekore = "4.2.0"
python-dotenv = "0.19.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
mypy = "^0.931"
scalene = "^1.4.2"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
