[tool.poetry]
name = "astrobot"
version = "22.4.1"
description = "the all-encompassing god-level bot for mochjicord"
authors = ["kevinshome <noah.tanner7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"
py-cord = "2.0.0b4"
python-dateutil = "^2.8.2"
tekore = "^4.2.0"
python-dotenv = "^0.20.0"
geopy = {version="^2.2.0", extras=['timezone']}
arrow = "^1.2.2"
colorthief = "^0.2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
mypy = "^0.942"
scalene = "^1.5.6"
radon = "^5.1.0"
sqlalchemy-stubs = "^0.4"
black = "^22.1.0"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
